--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1356,10 +1356,7 @@ An OMS language is conforming with \DOL if it satisfies the following conditions
 \begin{enumerate}
 \item \textbf{abstract syntax conformance:} its abstract syntax is conformant. This means that a) it is specified as an SMOF compliant meta model
 or as an EBNF grammar. Moreover, b) an SMOF metaclass or an EBNF non-terminal has to be declared to be a subclass of \syntax{NativeDocument}, and optionally
-another metaclass or non-terminal may be declared to be a subclass of \syntax{BasicOMS}  (see clause~\ref{s:mof-metaclasses}).
-Note that an XMI serialization for OMS written in the OMS language can be 
-automatically derived from the SMOF specification
-of the abstract syntax, using the canonical MOF 2 XMI Mapping;
+another metaclass or non-terminal may be declared to be a subclass of \syntax{BasicOMS}  (see clause~\ref{s:mof-metaclasses});
 \item  \textbf{serialization conformance:} it has at least one serialization in the sense of section~\ref{c:conform:serialization};
 %\item complete round-trip mappings from the human-readable serialization
 %to the abstract syntax and vice versa;
@@ -1483,10 +1480,13 @@ Independently from these criteria,   several levels of conformance of a
 serialization are distinguished. They differ with respect to their means of conveniently abbreviating long IRI identifiers. 
 \end{fminipage}
 
- There are six levels of conformance of a serialization of an OMS language with \DOL{}.
+ There are seven levels of conformance of a serialization of an OMS language with \DOL{}.
 
 
 \begin{description}
+\item[XMI conformance] An XMI serialization for OMS written in the OMS
+  language has been automatically derived from the SMOF specification
+  of the abstract syntax, using the canonical MOF 2 XMI Mapping.
 \item[XML conformance]
 The given serialization has to be specified as an XML schema that satisfies
  all of the following conditions:
@@ -9388,6 +9388,11 @@ The metaclass \syntax{OWL Model} is a subclass (in the sense of SMOF
 multiple classification) of \syntax{NativeDocument}.
 The metaclass \syntax{OWL PackageableElement} is a subclass (in the sense of SMOF
 multiple classification) of \syntax{BasicOMS}.
+
+\section{Serialization Conformance of UML With \DOL}
+
+The XMI serialization, derived from the MOF metamodel, is widely used
+fpr UML. Hence, UML is serialization conformant with \DOL.
 
 \section{Semantic Conformance of UML With \DOL}
 
