issue #261, Correspondence: How does “*” map? To DefaultCorrespondence? -- fixed

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4220,7 +4220,7 @@ applied unless the user specifies a translation that deviates from the default. 
 \DOL provides a syntax for expressing mappings between OMS.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}.  OMS mappings supported by \DOL include:
 \begin{itemize}
 \item imports (particularly including imports that lead to conservative extensions), see the
- MOF metaclasses   \syntax{OMSRef} and \syntax{ExtensionOMS} in
+ MOF metaclasses   \syntax{OMSReference} and \syntax{ExtensionOMS} in
 clause~\ref{c:abstract-syntax}.
 \item interpretations (both between OMS and OMS networks), see the
  MOF metaclass   \syntax{InterpretationDefinition} in
@@ -4978,7 +4978,8 @@ AlignmentType      ::= GroupOMS 'to' GroupOMS
 AlignmentSemantics ::= 'SingleDomain'
                      | 'GlobalDomain'
                      | 'ContextualizedDomain'
-Correspondence     ::= CorrespondenceBlock | SingleCorrespondence | '*'
+Correspondence     ::= CorrespondenceBlock | SingleCorrespondence | DefaultCorrespondence
+DefaultCorrespondence ::= '*' 
 CorrespondenceBlock ::= 'relation' [Relation] [Confidence] '{'
                         Correspondence ( ',' Correspondence )* '}'
 SingleCorrespondence ::= Symbol [Relation] [Confidence]
