The text about the DOL registry is now its own normative annex. closing issue #232

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2898,7 +2898,6 @@ The next three clauses are \emph{informative}. This clause provides some backgro
 
 
 \medskip \noindent 
-
 Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) as an SMOF compliant meta model.
 Further,  the same clause also provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
@@ -2911,9 +2910,12 @@ model-theoretic semantics of \DOL on the abstract syntax, and also
 makes the notion of heterogeneous logical environment (providing
 languages, logics and translations) precise (\emph{normative}).
 
+\medskip \noindent Annex \ref{a:registry} is about the \DOL registry,
+which allows to register \DOL conforming languages and translations (\emph{normative}).
+
 \medskip \noindent Annex \ref{a:dol-onto} specifies an RDF vocabulary for
 the terms in clause~\ref{terms-and-defs}, and for OMS languages and
-translation that conform with \DOL  (\emph{normative}).
+translation that conform with \DOL  (\emph{informative}).
 
 \medskip \noindent Various languages are shown to  conform to \DOL in
 informative annexes: OWL2 (annex \ref{a:owl}), Common Logic
@@ -2939,6 +2941,8 @@ are specified in the abstract syntax
 (\emph{informative}).
 %Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied  (\emph{informative}). For  each scenario,  a brief description  is provided, and the utilized \DOL features as well as the status of its implementation are listed.
 
+
+\medskip \noindent 
 Annex~\ref{a:tools} gives an overview of available  software tools for
 \DOL.  Annex~\ref{a:loc/id} discusses the implementation of a
 linked-data compliant IRI scheme used in one of these tools
@@ -8658,6 +8662,21 @@ $name_2 = 'relativized'++aName'$.
 
 \appendix
 
+
+\normannex{\DOL Registry}
+\label{a:registry}
+
+OMG hosts a registry for DOL-conforming languages and translations. This registry will enable the 
+ use of other DOL-conforming languages than the ones that are discussed in this OMG Specification. 
+The registry also includes descriptions of DOL-conforming languages and translations (as well as 
+ other information needed by implementors and users) in both human-readable and 
+machine-processable form.
+
+OMG maintains the registry as an informative resource governed by the standard. The registry 
+ contents itself is informative. 
+
+
+
 %\chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary that implements the \DOL terminology}
 \infannex{\DOL Ontology}
 \label{a:dol-onto}
@@ -8698,7 +8717,8 @@ It is intended to implement future versions of the \DOL ontology as a DOL docume
 
 \section{Intended Applications of the \DOL Ontology}\label{a:dol-onto-app}
 
-Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
+Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations 
+(see annex~\ref{a:registry}).
 
 The DOL ontology will also be used by the API for Knowledge Platforms
 (API4KP) OMG standardization initiative, see
@@ -8797,16 +8817,6 @@ to that of the top-level classes, see Fig.~\ref{fig:dol-onto-properties}.
 
 
 
-\section{\DOL Registry}\label{a:registry}
-
-OMG hosts a registry for DOL-conforming languages and translations. This registry will enable the 
- use of other DOL-conforming languages than the ones that are discussed in this OMG Specification. 
-The registry also includes descriptions of DOL-conforming languages and translations (as well as 
- other information needed by implementors and users) in both human-readable and 
-machine-processable form.
-
-OMG maintains the registry as an informative resource governed by the standard. The registry 
- contents itself is informative. 
 
 % %  \ednote{This paragraph has merely been moved.}
 % It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
