comment on higher-oder axiom

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -12257,7 +12257,7 @@ then
    . inf(M)=r <=> r <= M /\ forall s:Real . s <= M => s <= r  %(Real_inf_def)%
    . sup(M)=r <=> M <= r /\ forall s:Real . M <= s => r <= s  %(Real_sup_def)%
    . isBounded(M) <=> exists ub,lb:Real . lb <= M /\ M <= ub
-                                                        %(Real_isBounded_def)%
+                %(Real_isBounded_def)%  %% this is the single higher-order axiom
    . isBounded(M) => def inf(M) /\ def sup(M)  %(completeness)%
    . inj 0 = 0                                          %(Real_inj_0)%
    . inj (suc n) = 1 + inj n                    %(Real_inj_suc)%
