--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1568,8 +1568,16 @@ Any conforming serialization of an OMS language shall have a machine-processable
 
 \end{fminipage}
 
-For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization is retrievable by dereferencing this IRI; this requirement follows the linked data principles \nisref{W3C/TR REC-ldp-20150226:2015}. 
- As a minimal requirement, there must be a RDF description conforming to the vocabulary specified in \aref{a:dol-onto}. That description must be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.%\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
+For any conforming OMS language, logic, and serialization of an OMS language, it is required that 
+it be assigned an HTTP IRI, by which it can be identified.  It is also required that a 
+machine-processable description of this language/logic/serialization is retrievable by 
+dereferencing this IRI; this requirement follows the linked data principles
+\nisref{W3C/TR  REC-ldp-20150226:2015}. 
+As a minimal requirement, there must be a RDF description conforming to the vocabulary
+specified in \aref{a:dol-onto}. That description must be made available in the RDF/XML 
+serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  
+Descriptions of the language/logic/serialization in further representations, having different 
+content types, may be provided.%\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
 
 
 \sclause{Conformance of a Document With \DOL}\label{c:conform:document}
